project page in grid format

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ website:
   navbar:
     title: false
     logo: /www/logos/logo4.png
+    logo-href: /content/index.qmd
     toggle-position: right
     right:
       - text: "Home"
